--- a/vue/styleCSS/card.css
+++ b/vue/styleCSS/card.css
@@ -2,7 +2,14 @@
 body{
     overflow: auto;
     display: inline-block;
-    
+    background: -webkit-gradient(linear, left top, left bottom,
+    color-stop(0%, rgba(26, 49, 95, 1)),
+    color-stop(10%, rgba(26, 49, 95, 1)),
+    color-stop(24%, rgba(29, 108, 141, 1)),
+    color-stop(37%, rgba(41, 136, 151, 1)),
+    color-stop(77%, rgba(39, 45, 100, 1)),
+    color-stop(90%, rgba(26, 49, 95, 1)),
+    color-stop(100%, rgba(26, 49, 95, 1)));
 }
 
 .tout{
@@ -103,6 +110,9 @@ div .descPanier{
 .tout .li{
     list-style: none;
     padding-left: 20px;
+}
+.li{
+    margin-left: 10%;
 }
 .tout ul{
     display: flex;
