--- a/vue/styleCSS/vehicule/louerVoiture.css
+++ b/vue/styleCSS/vehicule/louerVoiture.css
@@ -338,3 +338,47 @@ body{
     opacity: 1;
   }
  
+
+
+
+  /********************************/
+
+  .iconAddV{
+    margin-left: 40%;
+}
+.addV {
+    text-align: center;
+    padding-right: 10%;
+    width: 80px;
+    color: black;
+    height: 80px;
+    font-size: 3rem;
+    z-index: 30;
+    border: 8px solid black;
+    padding: 10px;
+    background-color: transparent;
+    border-radius: 50%;
+}
+.addV i {
+}
+.supr {
+    width: 30px;
+    color: red;
+    height: 30px;
+    font-size: 2rem;
+    float: right;
+    position: relative;
+    z-index: 30;
+    background-color: black;
+    border-radius: 50%;
+    bottom: 10px;
+    right: 10px;
+}
+.supr {
+    text-decoration-color: red;
+}
+.allVoitures{
+    z-index: auto;
+    padding-right: 5%;
+    padding-top: 4%;
+}
